2003-03-13 21:58  chris

	* Gzip.pm, README: v0.10 Fix for mod_perl -- use in-memory
	compression

2003-02-12 13:05  chris

	* Gzip.pm: Rename the wrapper class to CGI::Compress::Gzip::wrapper

2003-02-12 08:51  chris

	* Gzip.pm, README, test.pl: v0.04 Acknowledge Windows failure
	Disable for mod_perl Case-insensitive content-encoding tests

2003-02-08 00:34  chris

	* Gzip.pm: Update documentation

2003-02-06 00:15  chris

	* Gzip.pm, README, test.pl: 0.03 Header tweaks towards mod_perl
	functionality

2003-02-05 23:31  chris

	* Gzip.pm: Work on the compression decision

2003-02-05 22:36  chris

	* README: v0.02, updated README

2003-02-05 22:34  chris

	* Gzip.pm, MANIFEST, test.pl, testhelp: Substantial overhaul.  Now
	it works under 5.6.0, but still not under mod_perl.

2003-01-21 13:02  chris

	* Gzip.pm, Makefile.PL, README, test.pl: Change name to
	CGI::Compress::Gzip

2003-01-21 09:27  chris

	* Gzip.pm: Improve text/html detection a little More documentation

2003-01-21 09:06  chris

	* Gzip.pm, README: Documentation

2003-01-20 17:34  chris

	* Gzip.pm: Update documentation

2003-01-20 14:51  chris

	* Gzip.pm: Added comments Put some global args into the Zlibwrapper
	object

2003-01-20 14:27  chris

	* Gzip.pm: Set version to 0.01 (earlier was wrong) Remove debugging
	comments

2003-01-20 14:14  chris

	* COPYRIGHT, Gzip.pm, MANIFEST, Makefile.PL, README, test.pl:
	Initial revision

2003-01-20 14:14  chris

	* COPYRIGHT, Gzip.pm, MANIFEST, Makefile.PL, README, test.pl:
	Initial import
