@@ -1,3 +1,8 @@
+2003-03-14 10:06  chris
+
+	* Gzip.pm, README: v0.11 Handle default content-type of text/html
+	Add helpful diagnostic HTTP headers, if requested
+
 2003-03-13 21:58  chris
 
 	* Gzip.pm, README: v0.10 Fix for mod_perl -- use in-memory
